added image drop box and refactored comments for content blocks
